# SENTRYX

./: .dockerignore  Dockerfile  README.md  context_analyzer.py  detectors.py  env.py  inference.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  reward_engine.py  server.py  start_backend.ps1  start_dashboard.ps1  tasks.py  test_env.py  test_server.py  tsconfig.json  validate-submission.sh
Dashboard/: Dashboard.py  __init__.py  api_client.py  charts.py
backend/: __init__.py  env.py  models.py  server.py
hf_space/: .dockerignore  .env.example  Dockerfile  README.md  app.py  context_analyzer.py  deploy_to_hf.ps1  deploy_to_hf.sh  detectors.py  env.py  inference.py  models.py  pyproject.toml  requirements.txt  reward_engine.py  server.py  tasks.py
hf_space/server/: app.py
src/: config.ts  contextAnalyzer.ts  decisionEngine.ts  demoBlocking.ts  env.ts  index.ts  integration.example.ts  llmGuard.ts  rewardEngine.ts  secureLLMClient.ts  types.ts  utils.ts
src/detectors/: heuristicRiskScorer.ts  keywordAnalyzer.ts  regexDetector.ts
tests/: env.test.ts
