[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-security"
version = "1.1.0"
description = "OpenEnv environment for LLM data leakage prevention."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rohith" },
  { name = "Bhuvana" },
  { name = "Jishnu" }
]
dependencies = [
  "openenv-core>=0.2.0,<0.3.0",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "openai>=2.7.2,<3.0.0",
  "pydantic==2.11.3",
  "requests==2.32.3",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "app",
  "context_analyzer",
  "detectors",
  "env",
  "inference",
  "models",
  "reward_engine",
  "tasks",
]
packages = ["server"]
